--- a/lumina-website/css/styles.css
+++ b/lumina-website/css/styles.css
@@ -99,17 +99,30 @@ img{
     line-height: 1.4;
     font-weight: normal;
 }
-.gallery-flex {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+/*gallery*/
+.gallery-grid{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
     gap: 20px;
 }
+
+
 .gallery-item{
-    width: calc(33.333% - 20px);
     border-radius: 20px;
 }
-
+.gallery-item img{
+    border-radius: 10px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.gallery-item:nth-of-type(2){
+    grid-column: span 2;
+}
+.gallery-item:nth-of-type(7){
+    grid-column: span 2;
+    grid-row: span 2;
+}
 .gallery-item img{
     border-radius: 10px;
 }
@@ -249,15 +262,25 @@ img{
         display: flex;
         flex-direction: column;
     }
+    .gallery-grid{
+        grid-template-columns: repeat(2,1fr);
+    }
+
+    .gallery-item:nth-of-type(1){
+        grid-column: span 2;
+    }
+    .gallery-item:nth-of-type(2){
+        grid-column: span 1;
+        grid-row: span 1;
+    }
+
     .hero{
         height : 300px;
     }
     .hero h2{
         font-size: 1.8rem;
     }
-    .gallery-item{
-        width: calc(50%-20px);
-    }
+    
     .footer .footer-flex{
         text-align: center;
 
