--- a/css/styles.css
+++ b/css/styles.css
@@ -61,7 +61,7 @@
 }
 
 
-.items-flex .item{
+.items-flex .item,.items-flex-col{
     display: flex;
     background-color: white;
     padding: 10px;
@@ -79,8 +79,15 @@
     gap:2rem;
 
 }
-
-
+.items-flex-col{
+    flex-direction: column;
+}
+.topic-text{
+    align-self: flex-start; 
+  font-size: 1.5rem; 
+  font-weight: bold;
+  width: 100%; 
+}
 a{
     text-decoration: none;
     color: black;
@@ -130,8 +137,16 @@ img{
     border-top-width: 1px;
 }
 
+.info{
+    background-color: antiquewhite;
+}
+
 @media(max-width:768px){
     .items-flex{
         flex-direction: column;
+    }
+    .header-flex .hero{
+        text-align: center;
+        font-size: 20px;
     }
 }
