--- a/css/styles.css
+++ b/css/styles.css
@@ -85,6 +85,7 @@
     gap:2rem;
 
 }
+
 .topic-card{
     flex-direction: row;
     flex:1;
@@ -99,6 +100,21 @@
   font-weight: bold;
   width: 100%; 
 }
+/*.item{
+    animation-name: cardMove;
+    animation-duration: 2.0s;
+    animation-timing-function: ease-in;
+}
+@keyframes cardMove {
+    from {
+        transform: translateX(-1800px);
+    }
+    to {
+        transform: translateX(0px);
+    }
+}*/
+
+
 a{
     text-decoration: none;
     color: black;
